dates implemented correctly. This is without default #flicker-api picture

--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ nav {
 }
 
 .flicker-api{
-  background-image: url("https://preview.redd.it/5hrn0yl0eg321.jpg?width=960&crop=smart&auto=webp&s=25f32d5a908ebc9f189859ca61d79a57241cddcc");
-  width: 100%;
+  width: 95%;
   height: 350px;
   align-content: center;
   background-image: #70ABAF;
